nabar button collapse issue

--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ body {
 
 #leaves-container {
   position: relative;
- 
+
   width: 100%;
   height: 100%;
   pointer-events: none;
@@ -373,6 +373,14 @@ body {
   color: #cc00ff !important; /* Example color */
   /* font-weight: bold; */
 }
+
+
+
+
+
+
+
+
 
 .card-title{
   text-align: center;
@@ -723,13 +731,11 @@ nav.dark-mode {
   height: 24px;
 }
 
-.footer-dark-mode {
+body.dark-mode footer {
   background-color: #333333;
+  color: #ffffff;
 }
-.footer-home-dark-mode{
-  background-color: #333333;
-  color: #ffffff!
-}
+
 
 /* cards for toolbox  */
 
